Fixes multiply on Firefox

--- a/public/css/_base.scss
+++ b/public/css/_base.scss
@@ -15,6 +15,7 @@ body {
   line-height: $base-line-height;
   letter-spacing: 0.01em;
   color: $black;
+  background: #FFF; // Necessary for Firefox to use `mix-blend-mode`
 }
 
 h1, h2, h3, h4, h5, h6, [contenteditable] {
